

                          avrtest NEWS
                          ============

* Support avrtest_log10f() and avrtest_log10l().                 2025-05-16

* Support -log=FILE for the LOG_XXX commands.                    2025-04-15

* Support -stdout=FILE, -stderr=FILE and -stdin=FILE.            2025-04-15

* Support mul, div and mod for int32_t and uint32_t.             2025-04-07

* Support float to fixed-point conversions.                      2025-04-06

* Support fixed-point to float conversions.                      2025-04-03

* Support avrtest_cmpf(), avrtest_utof(), avrtest_stof().        2025-04-03

* Support avrtest_cycles_call() for more precise measurement     2025-04-02
  of cycles consumed by a function call.

* Fixed wrong H flag computation in SUB and SUBI.                2025-03-03

* exit.o now sets stdin as a stream reading via                  2025-02-08
  avrtest_getchar().

* avrtest.h now works with -mint8.                               2024-06-12
  Notice that an -mint8 programm must be terminated with
  some abort flavour or with avrtest_exit.  Returning from
  main or using [__builtin_]exit will only return an 8-bit
  value, but the library functions are expecting a 16-bit
  exit value.

* Support syscalls LOG_FMT_F7T etc. to log libgcc's              2024-06-10
  internal IEEE double representation.

* Support syscalls like                                    r339  2023-11-14

      long double avrtest_sinl (long double);
      long double avrtest_mull (long double, long double);

  to help with IEEE double implementation.  For a
  complete list of functions, see README sections
  "IEEE single emulation" and "IEEE double emulation".
  There are also versions for float like:

      float avrtest_sinf (float);
      float avrtest_mulf (float, float);

* Use flash size from section .note.gnu.avr.deviceinfo     r338  2023-10-01
  provided by startup-code from AVR-LibC in crt<mcu>.o.
