@@ -958,7 +958,7 @@ Supported functions with two float arguments are:
     pow, atan2, hypot, fmin, fmax, fmod.
 
 Some more functions are:
-    ldexp, cmp, uto, sto.
+    ldexp, cmp, uto, sto, strto.
 
 Don't forget to append 'f' to the function name for the float versions.
 
@@ -966,6 +966,7 @@ avrtest_utof and avrtest_stof convert uint32_t resp. int32_t to float.
 avrtest_cmpf compares two floating-point values.  It returns -1, 0, +1
 when the values are less, equal or greater, respectively.
 It returns -128 for unordered comparisons.
+avrtest_strtof converts an ASCII string to float, just like strtof.
 
 AVRtest will terminate with an error if the host IEEE single cannot
 be used for emulation.
